--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "markdown-it": "^12.3.2",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.33",
+    "nanoid": "^4.0.0",
     "node-sass": "^6.0.1",
     "normalize-scss": "^7.0.1",
     "nuxt": "^2.13.3",
