--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "thenby": "^1.3.4",
     "uuid": "^8.3.2",
     "vue-chartjs": "^3.5.1",
+    "vue-good-table": "^2.21.11",
     "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.5"
   },
