--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUBLIC_BACKEND_URL="https://2862-44-242-171-154.ngrok.io"
-BASEROW_PUBLIC_URL="https://2862-44-242-171-154.ngrok.io"
-PRIVATE_BACKEND_URL="https://2862-44-242-171-154.ngrok.io"
+PUBLIC_BACKEND_URL="https://teamtables.dev.ds.tribal.credit"
+BASEROW_PUBLIC_URL="https://teamtables.dev.ds.tribal.credit"
+PRIVATE_BACKEND_URL="https://teamtables.dev.ds.tribal.credit"
 
